fix: correct database name in MySQL connection and update connection check logging

--- a/package.json
+++ b/package.json
@@ -21,6 +21,5 @@
   "bugs": {
     "url": "https://github.com/Noprot/SQL_WebPageProject/issues"
   },
-  "homepage": "https://github.com/Noprot/SQL_WebPageProject#readme",
-  "description": "My Database Password - dgj321kj4yu!kjqdhjadsddjakh!hjkdas\r for all the inteligent people!!"
+  "homepage": "https://github.com/Noprot/SQL_WebPageProject#readme"
 }
