feat: add cookie management for express-session
- Implemented a new Cookie class for managing session cookies, including properties like path, maxAge, httpOnly, and secure.
- Added methods for serializing cookies and returning JSON representations.

feat: create in-memory session store for express-session

- Developed MemoryStore class to manage session data in memory.
- Implemented methods for session management including all, clear, destroy, get, set, length, and touch.

feat: enhance session handling in express-session

- Created Session class to encapsulate session data and provide methods for touch, resetMaxAge, save, reload, destroy, and regenerate.
- Improved session regeneration and loading mechanisms.

feat: abstract session store functionality

- Introduced Store class as an abstract base for session stores.
- Added methods for regenerating sessions and loading session instances.

chore: update on-headers module

- Added history and license files for on-headers.
- Implemented README documentation for on-headers module.

chore: update random-bytes module

- Added history, license, and README files for random-bytes.
- Implemented core functionality for generating random bytes.

chore: update uid-safe module

- Added history, license, and README files for uid-safe.
- Implemented functionality for generating URL and cookie safe UIDs.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
     "mysql2": "^3.14.3"
   },
   "repository": {
@@ -15,7 +16,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "lint": "eslint"
+    "lint": "eslint",
+    "mysql-start": "net start minunMySqlDataBaseService",
+    "mysql-stop": "net stop minunMySqlDataBaseService"
   },
   "keywords": [],
   "author": "Noprot / No#",
